--- a/index.html
+++ b/index.html
@@ -79,7 +79,7 @@
 <body>
 
 <header>
-  <img class="profile" src="C:\Users\MUTAZ\Downloads\WhatsApp Image 2023-09-11 at 3.17.57 PM.jpeg" alt="صورة معتز" />
+  <img class="profile" src="profile.jpeg" alt="صورة معتز" />
   <h1>أ.معتز ميده</h1>
   <p class="subtitle">الهدوء _ التأمل _ الحياة _ الإيجابية
 مدرس كيمياء خارج الصندوق _ تصميم _ كتابة محتوى _ دراسات جدوى _ تصميم مواقع بـ WordPress
