--- a/index.html
+++ b/index.html
@@ -7,7 +7,8 @@
   <style>
     body {
       font-family: 'Tajawal', sans-serif;
-      background: linear-gradient(to bottom, #eaf3fa, #ffffff);
+background: url('background.jpg') no-repeat center center fixed;
+background-size: cover;
       margin: 0;
       padding: 0;
     }
